--- a/21 oktober középszint/web/tourdehongrie.html
+++ b/21 oktober középszint/web/tourdehongrie.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta lang="hu"
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bootstrap.min.css">
